<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:background="@color/white"
    app:cardCornerRadius="10dp"
    android:padding="10dp"
    android:layout_gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="#007AFF"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:text="Add experience"
                android:textColor="@color/white" />

            <ImageView
                android:id="@+id/imgClose"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/delete"
                android:layout_marginEnd="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/textView"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">
            <LinearLayout
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:layout_marginHorizontal="10dp">
                <TextView
                    android:layout_marginBottom="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/org_name"
                    android:textColor="#007AFF"
                    android:textSize="12sp"
                    android:textStyle="bold"/>
                <EditText
                    android:id="@+id/edtOrgName"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:hint="Organization name..."
                    android:paddingStart="10dp"
                    android:textSize="15dp"
                    android:textColor="@color/black"
                    android:background="@drawable/background_input_text"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="vertical"
                        android:layout_marginHorizontal="10dp">
                        <TextView
                            android:layout_marginBottom="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/from_date"
                            android:textColor="#007AFF"
                            android:textSize="12sp"
                            android:textStyle="bold"/>
                        <TextView
                            android:id="@+id/txtFromDate"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_marginTop="5dp"
                            android:hint="dd-mmm-yyyy"
                            android:paddingStart="10dp"
                            android:textSize="15dp"
                            android:gravity="center_vertical"
                            android:textColor="@color/black"
                            android:background="@drawable/background_input_text"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="vertical"
                        android:layout_marginHorizontal="10dp">
                        <TextView
                            android:layout_marginBottom="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/to_date"
                            android:textColor="#007AFF"
                            android:textSize="12sp"
                            android:textStyle="bold"/>
                        <TextView
                            android:id="@+id/txtToDate"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_marginTop="5dp"
                            android:hint="dd-mmm-yyyy"
                            android:paddingStart="10dp"
                            android:textSize="15dp"
                            android:gravity="center_vertical"
                            android:textColor="@color/black"
                            android:background="@drawable/background_input_text"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:layout_marginHorizontal="10dp">
                <TextView
                    android:layout_marginBottom="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/designation"
                    android:textColor="#007AFF"
                    android:textSize="12sp"
                    android:textStyle="bold"/>
                <EditText
                    android:id="@+id/edtDesignation"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:hint="Ex. Manager"
                    android:paddingStart="10dp"
                    android:textSize="15dp"
                    android:textColor="@color/black"
                    android:background="@drawable/background_input_text"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:layout_marginHorizontal="10dp">
                <TextView
                    android:layout_marginBottom="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/experience"
                    android:textColor="#007AFF"
                    android:textSize="12sp"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/txtExperience"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:hint="Ex. 2 years, 8 month"
                    android:paddingStart="10dp"
                    android:textSize="15dp"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    android:background="@drawable/background_input_text"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_marginBottom="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ctc"
                    android:textColor="#007AFF"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edtCTC"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/background_input_text"
                    android:hint="Ex. 100000"
                    android:paddingStart="10dp"
                    android:textColor="@color/black"
                    android:inputType="number"
                    android:textSize="15dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:layout_marginHorizontal="10dp">
                <TextView
                    android:layout_marginBottom="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:textColor="#007AFF"
                    android:textSize="12sp"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/edtLocation"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/background_input_text"
                    android:hint="Ex. Bangalore..."
                    android:paddingStart="10dp"
                    android:textColor="@color/black"
                    android:textSize="15dp" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:text="Save"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/button_background"
                android:textAllCaps="false"/>
        </LinearLayout>


    </LinearLayout>
</androidx.cardview.widget.CardView>